--- a/generate/1_apointment_letter_all.html
+++ b/generate/1_apointment_letter_all.html
@@ -323,7 +323,7 @@
             </tr>
         </table>
         <div class="justify size-11" style="margin: 6px 0;">
-            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span>মনিরা
+            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা ১ (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span>মনিরা
                 হক</span>, <span>জেলা প্রশাসক</span>, <span>ফেনী</span>, ২৬৬ ফেনী-২ (ফেনী সদর)
             নির্বাচনি এলাকার রিটার্নিং অফিসার নিম্নবর্ণিত ব্যক্তিগণকে উপরোল্লিখিত ভোটকেন্দ্রে ভোটগ্রহণের জন্য এতদ্বারা
             প্রিজাইডিং অফিসার এবং প্রিজাইডিং অফিসারকে সহায়তা দানের জন্য সহকারী প্রিজাইডিং অফিসার এবং পোলিং অফিসার
@@ -333,13 +333,13 @@
         <table id="officerTable" class="size-11" style="margin-top: 6px;">
             <tr>
                 <td class="center bold" style="border: 1px solid #000; padding: 5px; width: 15%; vertical-align: middle;">
-                    <p style="margin:0;">প্রিজাইডিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">প্রিজাইডিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td colspan="2" class="center bold" style="border: 1px solid #000; padding: 5px; width: 25%; vertical-align: middle;">
-                    <p style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td colspan="2" class="center bold" style="border: 1px solid #000; padding: 5px; width: 35%; vertical-align: middle;">
-                    <p style="margin:0;">পোলিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">পোলিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td class="center bold small-85" style="border: 1px solid #000; padding: 5px; width: 25%; vertical-align: middle;">
                     <p class="small-85" style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম যিনি প্রিজাইডিং অফিসারের অনুপস্থিতিতে প্রিজাইডিং অফিসার হিসেবে দায়িত্ব পালন করবেন</p>
@@ -404,7 +404,7 @@
                     <p>ও</p>
                     <p>রিটার্নিং অফিসার</p>
                     <p>ত্রয়োদশ জাতীয় সংসদ নির্বাচন-২০২৬</p>
-                    <p>২৬৬ ফেনী-২ (ফেনী সদর)</p>
+                    <p>২৬৬ ফেনী-২</p>
                 </td>
             </tr>
         </table>
@@ -427,10 +427,10 @@
             <p class="center size-11" style="margin-bottom: 5px;">(এই অংশটুকু রিটার্নিং অফিসারকে ফেরত দিতে হবে)</p>
 
             <p class="justify size-11" style="line-height: 1;">
-                আমি ................................................................., উপরে বর্ণিত নিয়োগ গ্রহণ করে
-                অংগীকার করছি যে,
+                আমি ................................................................., উপরে বর্ণিত নিয়োগ গ্রহণ করিয়া 
+                অংগীকার করিতেছি যে,
                 আমি আমার উপর অর্পিত দায়িত্ব সর্বপ্রকার দলীয়/গোষ্ঠীর/ধর্মীয় প্রভাব হতে মুক্ত থেকে সততা ও ন্যায়নিষ্ঠার
-                সাথে পালন করব।
+                সাথে পালন করিব।
                 আমি অবগত আছি যে, দায়িত্ব সম্পাদনে কোন ব্যত্যয়ের জন্য গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ (১৯৭২ সনের ১৫৫ নং আইন) ও
                 নির্বাচন পরিচালনা বিধিমালা, ২০০৮ এবং নির্বাচন কর্মকর্তা (বিশেষ বিধান) আইন, ১৯৯১ (১৯৯১ সনের ১৩ নং আইন)
                 এবং সংশ্লিষ্ট অন্যান্য আইন অনুযায়ী দায়ী থাকিব।
