--- a/generate/1_apointment_letter.html
+++ b/generate/1_apointment_letter.html
@@ -310,7 +310,7 @@
             </tr>
         </table>
         <div class="justify size-11" style="margin: 6px 0;">
-            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span>মনিরা
+            গণপ্রতিনিধিত্ব আদেশ, ১৯৭২ এর অনুচ্ছেদ ৯ এর দফা ১ (১খ) এ প্রদত্ত ক্ষমতা বলে আমি <span>মনিরা
                 হক</span>, <span>জেলা প্রশাসক</span>, <span>ফেনী</span>, ২৬৬ ফেনী-২ (ফেনী সদর)
             নির্বাচনি এলাকার রিটার্নিং অফিসার নিম্নবর্ণিত ব্যক্তিগণকে উপরোল্লিখিত ভোটকেন্দ্রে ভোটগ্রহণের জন্য এতদ্বারা
             প্রিজাইডিং অফিসার এবং প্রিজাইডিং অফিসারকে সহায়তা দানের জন্য সহকারী প্রিজাইডিং অফিসার এবং পোলিং অফিসার
@@ -320,13 +320,13 @@
         <table id="officerTable" class="size-11" style="margin-top: 6px;">
             <tr>
                 <td class="center bold" style="border: 1px solid #000; padding: 5px; width: 15%; vertical-align: middle;">
-                    <p style="margin:0;">প্রিজাইডিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">প্রিজাইডিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td colspan="2" class="center bold" style="border: 1px solid #000; padding: 5px; width: 25%; vertical-align: middle;">
-                    <p style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td colspan="2" class="center bold" style="border: 1px solid #000; padding: 5px; width: 35%; vertical-align: middle;">
-                    <p style="margin:0;">পোলিং অফিসারের নাম, পদবী, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
+                    <p style="margin:0;">পোলিং অফিসারের নাম, পদবি, প্রতিষ্ঠানের নাম ও মোবাইল নম্বর</p>
                 </td>
                 <td class="center bold small-85" style="border: 1px solid #000; padding: 5px; width: 25%; vertical-align: middle;">
                     <p class="small-85" style="margin:0;">সহকারী প্রিজাইডিং অফিসারের নাম যিনি প্রিজাইডিং অফিসারের অনুপস্থিতিতে প্রিজাইডিং অফিসার হিসেবে দায়িত্ব পালন করবেন</p>
@@ -383,7 +383,7 @@
             <tr>
                 <td valign="top" style="width: 60%;">
                     <p><span class="bold">স্থান:</span> রিটার্নিং অফিসারের কার্যালয়, ফেনী।</p>
-                    <p><span class="bold">তারিখ:</span> ১১/০২/২০২৬ খ্রি:</p>
+                    <p><span class="bold">তারিখ:</span> .../০২/২০২৬ খ্রি:</p>
                 </td>
                 <td valign="top" class="center" style="width: 40%;">
                     <p>(মনিরা হক)</p>
@@ -391,7 +391,7 @@
                     <p>ও</p>
                     <p>রিটার্নিং অফিসার</p>
                     <p>ত্রয়োদশ জাতীয় সংসদ নির্বাচন-২০২৬</p>
-                    <p>২৬৬ ফেনী-২ (ফেনী সদর)</p>
+                    <p>২৬৬ ফেনী-২ </p>
                 </td>
             </tr>
         </table>
