--- a/generate/1_apointment_letter_all.html
+++ b/generate/1_apointment_letter_all.html
@@ -396,7 +396,7 @@
             <tr>
                 <td valign="top" style="width: 60%;">
                     <p><span class="bold">স্থান:</span> রিটার্নিং অফিসারের কার্যালয়, ফেনী।</p>
-                    <p><span class="bold">তারিখ:</span> ১১/০২/২০২৬ খ্রি:</p>
+                    <p><span class="bold">তারিখ:</span> .../০২/২০২৬ খ্রি:</p>
                 </td>
                 <td valign="top" class="center" style="width: 40%;">
                     <p>(মনিরা হক)</p>
