--- a/generate/1_apointment_letter.html
+++ b/generate/1_apointment_letter.html
@@ -382,8 +382,7 @@
         <table style="width: 100%; margin-top: 30px;" class="size-11">
             <tr>
                 <td valign="top" style="width: 60%;">
-                    <p><span class="bold">স্থান:</span> রিটার্নিং অফিসারের কার্যালয়, ফেনী।</p>
-                    <p><span class="bold">তারিখ:</span> .../০২/২০২৬ খ্রি:</p>
+                    <p><span class="bold">তারিখ:</span> ........./০২/২০২৬ খ্রি:</p>
                 </td>
                 <td valign="top" class="center" style="width: 40%;">
                     <p>(মনিরা হক)</p>
