--- a/duty_code.html
+++ b/duty_code.html
@@ -460,7 +460,7 @@
     <div class="container">
         <header>
             <h1><i class="fas fa-vote-yea"></i> দায়িত্ব অনুসন্ধান</h1>
-            <p class="subtitle">আপনার নির্বাচনি দায়িত্বের কেন্দ্র খুঁজুন</p>
+            <p class="subtitle">আপনার নির্বাচনি দায়িত্বের চিঠি খুঁজুন</p>
         </header>
 
         <div class="search-box">
